# MahjongDetector

./: README.md  composeApp.js  settings.gradle.kts
.fleet/: receipt.json
.github/workflows/: build-apk.yml  build-ipa.yml
best_web_model/: metadata.yaml
buildSrc/: settings.gradle.kts
buildSrc/src/main/kotlin/: OnnxRuntimeLibraryFilter.kt
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/io/ssttkkl/mahjongdetector/: MahjongDetector.android.kt  MainActivity.kt  MyApp.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/io/ssttkkl/mahjongdetector/: App.kt  MahjongDetector.kt
composeApp/src/desktopMain/kotlin/io/ssttkkl/mahjongdetector/: MahjongDetector.desktop.kt  main.kt
composeApp/src/iosMain/kotlin/io/ssttkkl/mahjongdetector/: MainViewController.kt
composeApp/src/skiaMain/kotlin/io/ssttkkl/mahjongdetector/: ImagePreprocessor.kt
composeApp/src/wasmJsMain/kotlin/io/ssttkkl/mahjongdetector/: ImageLoader.wasmJs.kt  MahjongDetector.wasmJs.kt
composeApp/src/wasmJsMain/resources/: index.html
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
python-lib/: .gitignore  README.md  pyproject.toml
python-lib/src/mahjong_detector/: __init__.py  __main__.py  predict.py  preprocess.py
